--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -915,8 +915,332 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "1f172428",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test working\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Test working\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "eeaee36c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of features model expects: 22\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "model = pickle.load(open(\"credit_model.pkl\", \"rb\"))\n",
+    "\n",
+    "print(\"Number of features model expects:\", model.n_features_in_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f1b17cd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "Index(['person_age', 'person_income', 'person_emp_length', 'loan_amnt'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "feature_names = pickle.load(open(\"feature_names.pkl\", \"rb\"))\n",
+    "\n",
+    "print(len(feature_names))\n",
+    "print(feature_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d527447e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person_age</th>\n",
+       "      <th>person_income</th>\n",
+       "      <th>person_home_ownership</th>\n",
+       "      <th>person_emp_length</th>\n",
+       "      <th>loan_intent</th>\n",
+       "      <th>loan_grade</th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>loan_int_rate</th>\n",
+       "      <th>loan_status</th>\n",
+       "      <th>loan_percent_income</th>\n",
+       "      <th>cb_person_default_on_file</th>\n",
+       "      <th>cb_person_cred_hist_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22</td>\n",
+       "      <td>59000</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>D</td>\n",
+       "      <td>35000</td>\n",
+       "      <td>16.02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>21</td>\n",
+       "      <td>9600</td>\n",
+       "      <td>OWN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>EDUCATION</td>\n",
+       "      <td>B</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>11.14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>N</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>25</td>\n",
+       "      <td>9600</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>C</td>\n",
+       "      <td>5500</td>\n",
+       "      <td>12.87</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>N</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>23</td>\n",
+       "      <td>65500</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>C</td>\n",
+       "      <td>35000</td>\n",
+       "      <td>15.23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>N</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>24</td>\n",
+       "      <td>54400</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>C</td>\n",
+       "      <td>35000</td>\n",
+       "      <td>14.27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   person_age  person_income person_home_ownership  person_emp_length  \\\n",
+       "0          22          59000                  RENT              123.0   \n",
+       "1          21           9600                   OWN                5.0   \n",
+       "2          25           9600              MORTGAGE                1.0   \n",
+       "3          23          65500                  RENT                4.0   \n",
+       "4          24          54400                  RENT                8.0   \n",
+       "\n",
+       "  loan_intent loan_grade  loan_amnt  loan_int_rate  loan_status  \\\n",
+       "0    PERSONAL          D      35000          16.02            1   \n",
+       "1   EDUCATION          B       1000          11.14            0   \n",
+       "2     MEDICAL          C       5500          12.87            1   \n",
+       "3     MEDICAL          C      35000          15.23            1   \n",
+       "4     MEDICAL          C      35000          14.27            1   \n",
+       "\n",
+       "   loan_percent_income cb_person_default_on_file  cb_person_cred_hist_length  \n",
+       "0                 0.59                         Y                           3  \n",
+       "1                 0.10                         N                           2  \n",
+       "2                 0.57                         N                           3  \n",
+       "3                 0.53                         N                           2  \n",
+       "4                 0.55                         Y                           4  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"credit_risk_dataset.csv\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1a7d0c54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.drop(\"loan_status\", axis=1)\n",
+    "y = df[\"loan_status\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "225cc49b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = pd.get_dummies(X, drop_first=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f14f565f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(32581, 22)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "56b6ebe8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(max_iter=1000)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(max_iter=1000)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LogisticRegression(max_iter=1000)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = df.drop(\"loan_status\", axis=1)\n",
+    "y = df[\"loan_status\"]\n",
+    "\n",
+    "X = pd.get_dummies(X, drop_first=True)\n",
+    "\n",
+    "# Handle missing values\n",
+    "X = X.fillna(X.median())\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "model = LogisticRegression(max_iter=1000)\n",
+    "model.fit(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "71504d92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(32581, 22)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "169ab07a",
+   "id": "4c5cecf5",
    "metadata": {},
    "outputs": [],
    "source": []
