--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -916,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1f172428",
+   "id": "a8269346",
    "metadata": {
     "scrolled": true
    },
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "eeaee36c",
+   "id": "493ea78e",
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f1b17cd6",
+   "id": "aa606dfb",
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d527447e",
+   "id": "631295d6",
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1a7d0c54",
+   "id": "edde9538",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "225cc49b",
+   "id": "599530bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1159,7 +1159,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f14f565f",
+   "id": "cb251c60",
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "56b6ebe8",
+   "id": "0642d3b6",
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1222,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "71504d92",
+   "id": "3ceade79",
    "metadata": {},
    "outputs": [
     {
@@ -1239,8 +1239,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "2810d499",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "pickle.dump(model, open(\"credit_model.pkl\", \"wb\"))\n",
+    "pickle.dump(scaler, open(\"scaler.pkl\", \"wb\"))\n",
+    "pickle.dump(X.columns, open(\"feature_names.pkl\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4c5cecf5",
+   "id": "6cf79ce8",
    "metadata": {},
    "outputs": [],
    "source": []
