--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1253,8 +1253,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6cf79ce8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Features: 11\n",
+      "Numeric features: 7\n",
+      "Categorical features: 4\n",
+      "✅ Model trained successfully with numeric + categorical features!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import pickle\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# Load dataset\n",
+    "df = pd.read_csv(\"credit_risk_dataset.csv\")\n",
+    "\n",
+    "# Target\n",
+    "y = df[\"loan_status\"]\n",
+    "X = df.drop(\"loan_status\", axis=1)\n",
+    "\n",
+    "print(\"Original Features:\", X.shape[1])\n",
+    "\n",
+    "# Separate numeric & categorical columns\n",
+    "numeric_features = X.select_dtypes(include=[\"int64\", \"float64\"]).columns\n",
+    "categorical_features = X.select_dtypes(include=[\"object\"]).columns\n",
+    "\n",
+    "print(\"Numeric features:\", len(numeric_features))\n",
+    "print(\"Categorical features:\", len(categorical_features))\n",
+    "\n",
+    "# Numeric pipeline\n",
+    "numeric_pipeline = Pipeline([\n",
+    "    (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
+    "    (\"scaler\", StandardScaler())\n",
+    "])\n",
+    "\n",
+    "# Categorical pipeline\n",
+    "categorical_pipeline = Pipeline([\n",
+    "    (\"imputer\", SimpleImputer(strategy=\"most_frequent\")),\n",
+    "    (\"encoder\", OneHotEncoder(handle_unknown=\"ignore\"))\n",
+    "])\n",
+    "\n",
+    "# Combine both\n",
+    "preprocessor = ColumnTransformer([\n",
+    "    (\"num\", numeric_pipeline, numeric_features),\n",
+    "    (\"cat\", categorical_pipeline, categorical_features)\n",
+    "])\n",
+    "\n",
+    "# Full pipeline\n",
+    "model = Pipeline([\n",
+    "    (\"preprocessor\", preprocessor),\n",
+    "    (\"classifier\", LogisticRegression(max_iter=1000))\n",
+    "])\n",
+    "\n",
+    "# Split data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")\n",
+    "\n",
+    "# Train\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Save full pipeline\n",
+    "pickle.dump(model, open(\"credit_model.pkl\", \"wb\"))\n",
+    "\n",
+    "print(\"✅ Model trained successfully with numeric + categorical features!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ec5395f",
    "metadata": {},
    "outputs": [],
    "source": []
