--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1336,8 +1336,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "4ec5395f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'sklearn.pipeline.Pipeline'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "model = pickle.load(open(\"credit_model.pkl\", \"rb\"))\n",
+    "print(type(model))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c9f3d982",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sklearn\n",
+    "print(sklearn.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "248ab9c8",
    "metadata": {},
    "outputs": [],
    "source": []
