--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1376,8 +1376,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "248ab9c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sklearn\n",
+    "print(sklearn.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a1cd6e0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline.fit(X_train, y_train)\n",
+    "pickle.dump(pipeline, open(\"credit_model.pkl\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f78f6fb",
    "metadata": {},
    "outputs": [],
    "source": []
